--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,12 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "~1.3.0",
-    "angular-route": "~1.3.0",
+    "angular": "~1.2.26",
+    "angular-route": "~1.2.26",
     "modernizr": "~2.8.3",
-    "angular-google-chart": "~0.0.11"
+    "angular-google-chart": "~0.0.11",
+    "d3": "~3.3.13",
+    "nvd3": "~1.1.15-beta",
+    "angularjs-nvd3-directives": "~0.0.7"
   }
 }
