--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,15 @@
     "jquery": "~2.1.1",
     "angular": "~1.2.26",
     "angular-route": "~1.2.26",
+    "angular-animate": "1.2.26",
     "modernizr": "~2.8.3",
     "angular-google-chart": "~0.0.11",
     "d3": "~3.3.13",
     "nvd3": "~1.1.15-beta",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "angular-ui-date": "latest",
+    "scrollr": "latest",
+    "typeplate-starter-kit":"latest",
+    "ng-file-upload": "latest"
   }
 }
