--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,9 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "~1.2.26",
-    "angular-route": "~1.2.26",
-    "angular-animate": "1.2.26",
+    "angular": "~1.2.28",
+    "angular-route": "~1.2.28",
+    "angular-animate": "1.2.28",
     "modernizr": "~2.8.3",
     "angular-google-chart": "~0.0.11",
     "d3": "~3.3.13",
@@ -26,7 +26,7 @@
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-ui-date": "latest",
     "scrollr": "latest",
-    "typeplate-starter-kit":"latest",
-    "ng-file-upload": "latest"
+    "ng-file-upload": "latest",
+    "livereload-js": "latest"
   }
 }
