it's been so long save. Before I get back to messing with file upload

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ public/css/
 public/vendor/
 public/img/roasts/
 karma.conf.js
+coffee-app-file-upload.credentials.csv
+.aws
+.env
+Gemfile.lock
+.rebooted
