--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "karma": "*",
-    "karma-jasmine": "*",
-    "karma-chrome-launcher": "0",
-    "monk": "*",
+    "aws-sdk": "^2.2.17",
     "body-parser": "*",
+    "connect-multiparty": "*",
     "express": "*",
+    "karma": "*",
+    "karma-chrome-launcher": "0",
+    "karma-jasmine": "*",
     "method-override": "*",
-    "connect-multiparty": "*"
+    "monk": "*"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
