--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,11 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "~1.2.28",
-    "angular-route": "~1.2.28",
-    "angular-animate": "1.2.28",
+    "angular": "^1.3.15 || >1.4.0-beta.0",
+    "angular-route": "^1.3.15 || >1.4.0-beta.0",
+    "angular-animate": "^1.3.15 || >1.4.0-beta.0",
+    "angular-aria": "^1.3.15 || >1.4.0-beta.0",
+    "angular-material": "~0.11.4",
     "modernizr": "~2.8.3",
     "angular-google-chart": "~0.0.11",
     "d3": "~3.3.13",
@@ -27,9 +29,9 @@
     "angular-ui-date": "latest",
     "scrollr": "latest",
     "ng-file-upload": "latest",
-    "livereload-js": "latest"
-  },
-  "devDependencies": {
-    "susy": "~2.2.6"
+    "livereload-js": "latest",
+    "susy": "~2.2.5",
+    "breakpoint-sass": "~2.6.1",
+    "sanitize-css": "~1.1.0"
   }
 }
