major overhaul. Readying for production v 0.0.1

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,10 @@
 node_modules/
 public/css/
 public/vendor/
-public/img/roasts/
 public/views/
 public/index.html
-public/stylesheets/
-karma.conf.js
 coffee-app-file-upload.credentials.csv
 .aws
 .env
-Gemfile.lock
 .rebooted
+.DS_Store
