--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "MEAN_coffee_roast_log",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "https://github.com/lopesa/roast_log_build",
+  "main": ["server.js"],
   "authors": [
     "tony lopes <tony@lopesdesign.com>"
   ],
@@ -15,21 +16,14 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.1",
     "angular": "^1.3.15 || >1.4.0-beta.0",
     "angular-route": "^1.3.15 || >1.4.0-beta.0",
     "angular-animate": "^1.3.15 || >1.4.0-beta.0",
     "angular-aria": "^1.3.15 || >1.4.0-beta.0",
-    "angular-material": "~0.11.4",
-    "modernizr": "~2.8.3",
-    "angular-google-chart": "~0.0.11",
+    "angular-material": "~0.11.4"
+  },
+   "devDependencies": {
     "d3": "~3.3.13",
-    "nvd3": "~1.1.15-beta",
-    "angularjs-nvd3-directives": "~0.0.7",
-    "angular-ui-date": "latest",
-    "scrollr": "latest",
-    "ng-file-upload": "latest",
-    "livereload-js": "latest",
-    "sanitize-css": "~1.1.0"
+    "livereload-js": "latest"
   }
 }
