--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
   "name": "roast-log",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "description": "a coffee roast logging app",
+  "main": "server.js",
   "dependencies": {
     "aws-sdk": "^2.2.17",
     "body-parser": "*",
     "connect-multiparty": "*",
     "express": "*",
-    "karma": "*",
-    "karma-chrome-launcher": "0",
-    "karma-jasmine": "*",
     "method-override": "*",
-    "monk": "*"
+    "monk": "*",
+    "grunt": "~0.4.4",
+    "grunt-contrib-jade": "^0.15.0",
+    "grunt-sass": "^1.1.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
     "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-cssmin": "latest",
-    "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-jshint": "latest",
-    "grunt-contrib-less": "latest",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-node-inspector": "^0.1.5",
     "grunt-nodemon": "^0.3.0",
-    "grunt-sass": "^1.1.0",
     "grunt-shell": "^1.1.1",
     "jshint-stylish": "latest",
     "open": "latest"
+  },
+  "engines": {
+    "node": "0.12.7"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "postinstall": "bower install && grunt build"
   }
 }
