--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "bower": "^1.7.2",
     "connect-multiparty": "*",
     "express": "*",
-    "grunt": "~0.4.4",
+    "grunt": "^0.4.5",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-sass": "^1.1.0",
     "method-override": "*",
-    "monk": "*"
-  },
-  "devDependencies": {
+    "monk": "*",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-watch": "latest",
