troubleshooting heroku install. Grunt problem now pt2

--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "connect-multiparty": "*",
     "express": "*",
     "grunt": "^0.4.5",
-    "grunt-contrib-jade": "^0.15.0",
-    "grunt-sass": "^1.1.0",
-    "method-override": "*",
-    "monk": "*",
+    "grunt-cli": "0.1.13",
     "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-node-inspector": "^0.1.5",
     "grunt-nodemon": "^0.3.0",
+    "grunt-sass": "^1.1.0",
     "grunt-shell": "^1.1.1",
     "jshint-stylish": "latest",
+    "method-override": "*",
+    "monk": "*",
     "open": "latest"
   },
   "engines": {
